# TitanFlow

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  TITANARRAY_PROJECT_STATUS.md  fleet-inference-baseline-20260311.txt  governance_engine.py  ground-truth.json  ground-truth.training.json  octopus-api.governance_engine.py  pyproject.toml
config/: titanflow-core.yaml
deploy/systemd/: titanflow-core.service  titanflow-mod@.service  titanflow-v03-telemetry-http.service  titanflow-v03-telemetry.socket  titanflow-v03.service
docs/: SOUL-OLLIE.md  STATUS-2026-02-28.md  titanflow-grounding-gate-memory-2026-02-28.md  titanflow-v0.2-mvp-scaffold.md  titanflow-v0.3-progress-2026-02-28.md
manifests/: research.yaml
migrations/gms_atlas/: 001_phase1_identity_layer.sql  002_phase1_communications_ledger.sql  003_phase1_identity_hardening.sql  004_phase1_identity_resolution_log.sql
scripts/: titan-health-report.sh
tests/: test_context_injector.py  test_context_store.py  test_credit_middleware.py  test_dispatch_routing.py  test_governance_engine_import.py  test_management_surface.py  test_memory_flush.py  test_model_router.py  test_provision_user.py  test_titanocta_free.py  test_v02_memory.py  test_v03_acceptance.py  test_v03_ipc.py  test_v03_live_acceptance.py  test_v03_llm.py  test_v03_wal.py  test_v03_watchdog.py
titanflow/: __init__.py  personality.py
titanflow/core/: ipc.py  (+11 more)
titanocta/: __init__.py  _octopus.py  agent.py  cli.py  config.py  installer.py  management.py  model_router.py  routing.py  soft_cap_handler.py  telemetry_consent.py
(+58 files in other folders)
